--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://The-DigitalAcademy.github.io/dellecommerce",
+  "homepage": "https://The-DigitalAcademy.github.io/bongumusa-dellecommerce",
   "name": "dellecommerce",
   "version": "0.1.0",
   "private": true,
